[package]
name = "enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = false

[dependencies]
byteorder = "1.3.2" 
rand = "0.7"
rayon = "1.1.0"
