[package]
name = "enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = false

[features]

small-table = []

[dependencies]
byteorder = "1.3.2" 
rand = "0.7"
rayon = "1.1.0"
crossbeam = "0.7.2"
ring = {git = "https://github.com/ndokmai/ring.git", branch="sgx-target"}

